--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,6 +1,8 @@
 version: '3.8'
+name: tandain
 services:
   db: 
+    container_name: postgres
     image: postgres:14.1-alpine
     restart: always                           # Restart if the container stops automatically
     environment:
@@ -13,11 +15,12 @@ services:
       - ../tandain-user-api/src/config/db/dev_tandain_user-20220731.sql:/docker-entrypoint-initdb.d/dev_tandain_user.sql
       - ../tandain-article-api/src/config/db/dev_tandain_article-20220731.sql:/docker-entrypoint-initdb.d/dev_tandain_article.sql
   user-api:
+    container_name: user-api
     build:
       context: ../tandain-user-api
       target: local
     volumes:
-      - ../tandain-user-api:/app
+      - ../tandain-user-api:/usr/app
     command: yarn run docker
     ports:
       - '3001:3001'
@@ -39,18 +42,19 @@ services:
     links: 
       - db
   article-api:
+    container_name: article-api
     build:
       context: ../tandain-article-api
       target: local
     volumes:
-      - ../tandain-article-api:/app
+      - ../tandain-article-api:/usr/app
     command: yarn run docker
     ports:
       - '3002:3002'
     environment:
       NODE_ENV: local
       DEBUG: nodejs-docker-express:*          # Instructing the server to perform a verbose debug
-      PORT: ${ARTICLE_API_HOST}
+      PORT: ${ARTICLE_API_PORT}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_HOST: db
