--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,8 +1,8 @@
 version: '3.8'
-name: tandain
+name: tandain-development
 services:
   db: 
-    container_name: postgres
+    container_name: dev-postgres
     image: postgres:14.1-alpine
     restart: always                           # Restart if the container stops automatically
     environment:
@@ -15,17 +15,14 @@ services:
       - ../tandain-user-api/src/config/db/dev_tandain_user-20220731.sql:/docker-entrypoint-initdb.d/dev_tandain_user.sql
       - ../tandain-article-api/src/config/db/dev_tandain_article-20220731.sql:/docker-entrypoint-initdb.d/dev_tandain_article.sql
   user-api:
-    container_name: user-api
+    container_name: dev-user-api
     build:
       context: ../tandain-user-api
-      target: local
-    volumes:
-      - ../tandain-user-api:/usr/app
-    command: yarn run build
+      target: development
     ports:
       - '3001:3001'
     environment:
-      NODE_ENV: local
+      NODE_ENV: development
       DEBUG: nodejs-docker-express:*          # Instructing the server to perform a verbose debug
       HOST: ${USER_API_HOST}
       PORT: ${USER_API_PORT}
@@ -42,17 +39,14 @@ services:
     links: 
       - db
   article-api:
-    container_name: article-api
+    container_name: dev-article-api
     build:
       context: ../tandain-article-api
-      target: local
-    volumes:
-      - ../tandain-article-api:/usr/app
-    command: yarn run build
+      target: development
     ports:
       - '3002:3002'
     environment:
-      NODE_ENV: local
+      NODE_ENV: development
       DEBUG: nodejs-docker-express:*          # Instructing the server to perform a verbose debug
       PORT: ${ARTICLE_API_PORT}
       DB_USER: ${DB_USER}
@@ -68,4 +62,4 @@ services:
       - db
 volumes:
   db: 
-    driver: local
+    driver: development
