--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -21,7 +21,7 @@ services:
       target: local
     volumes: 
       - ../tandain-gateway:/usr/app
-    command: yarn run start"
+    command: yarn run start
     ports:
       - '4000:4000'
     environment:
