--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -15,7 +15,7 @@ services:
       - ../tandain-user-api/src/config/db/dev_tandain_user-20220731.sql:/docker-entrypoint-initdb.d/dev_tandain_user.sql
       - ../tandain-article-api/src/config/db/dev_tandain_article-20220731.sql:/docker-entrypoint-initdb.d/dev_tandain_article.sql
   gateway:
-    container_name: gateway
+    container_name: dev-gateway
     build: 
       context: ../tandain-gateway
       target: local
